--- a/test/fixtures/index.html
+++ b/test/fixtures/index.html
@@ -34,6 +34,14 @@
   <script src="scripts/file-2.js"></script>
   <!-- endimportsrc -->
 
+  <!-- importsrc
+    concat:temp/scripts/importsrcs-concat_output_check-minified.js
+    checkMinified:true -->
+  <script src="scripts/vendors/plugin.js"></script>
+  <script src="scripts/file-1.js"></script>
+  <script src="scripts/file-2.js"></script>
+  <!-- endimportsrc -->
+
   <!--
     importsrc
     update:uglify.test.files['temp/scripts/uglify_output.js']
